@@ -1,3 +1,8 @@
+2015-10-22  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/58754
+	* gfortran.dg/pr58754.f90: New test
+
 2015-10-22  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
 	Backport from mainline
